--- a/src/App.css
+++ b/src/App.css
@@ -128,9 +128,9 @@
   cursor: pointer;
   border: 0;
   padding: 0;
-  margin: 0;
-  width: 2.6rem;
-  height: 2.6rem;
+  margin: 4px;
+  width: 1rem;
+  height: 1rem;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -138,8 +138,8 @@
 }
 .embla__dot:after {
   box-shadow: inset 0 0 0 0.2rem var(--detail-medium-contrast);
-  width: 1.4rem;
-  height: 1.4rem;
+  width: 1rem;
+  height: 1rem;
   border-radius: 50%;
   display: flex;
   align-items: center;
